Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35368

Validation of SSL certificate fails for mariadb-backup

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 11.4
    • 11.4.5, 11.7.2
    • Backup, SSL
    • None

    Description

      This bug is a follow-up of MDEV-34730 (CONC-712).

      While the issue does not happen anymore for regular mariadb-client:

      root@aio1-galera-container-79d1071a:/# mariadb -u admin -p9fe634d48308ab6a23769a243a4b72786736136da0
      Welcome to the MariaDB monitor.  Commands end with ; or \g.
      Your MariaDB connection id is 276
      Server version: 11.4.4-MariaDB-ubu2204-log mariadb.org binary distribution
       
      Copyright (c) 2000, 2018, Oracle, MariaDB Corporation Ab and others.
       
      Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
       
      MariaDB [(none)]> ^DBye
      root@aio1-galera-container-79d1071a:/#
      

      It was not fixed for mariadb-backup:

      root@aio1-galera-container-79d1071a:/# mariadb-backup -u admin -p9fe634d48308ab6a23769a243a4b72786736136da0 --backup --target-dir=/tmp/backup
      [00] 2024-11-08 11:40:37 Connecting to MariaDB server host: localhost, user: admin, password: set, port: 3306, socket: /var/run/mysqld/mysqld.sock
      [00] 2024-11-08 11:40:37 Failed to connect to MariaDB server: SSL connection error: SSL certificate validation failure.
      root@aio1-galera-container-79d1071a:/# 
      

      This eventually results in Galera clustering failure, as once other cluster members try to sync with cluster leader, it fails to launch mariabackup:

      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[24456]: WSREP_SST: [INFO] Streaming the backup to joiner at 172.29.237.189:4444 (20241108 11:41:44.528)
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[24456]: WSREP_SST: [INFO] Evaluating /usr//bin/mariadb-backup --backup --no-version-check --databases-exclude='lost+found' --tmpdir='/var/lib/mysql/tmp.kyenDj14iu' --innodb-data-home-dir='.' --log-bin='/var/lib/mysql/mariadb-bin' --user='admin' --socket='/run/mysqld/mysqld.sock' --galera-info --stream=mbstream --target-dir='/var/lib/mysql/tmp.b5StCjd39n' --datadir='/var/lib/mysql' --mysqld-args --log-bin-index='/var/lib/mysql/mariadb-bin.index' '--wsrep-new-cluster' '--wsrep_start_position=00000000-0000-0000-0000-000000000000:-1' 2> '/var/lib/mysql/mariabackup.backup.log' | socat -u stdio TCP:172.29.237.189:4444; RC=( ${PIPESTATUS[@]} ) (20241108 11:41:44.531)
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[2702]: 2024-11-08 11:41:44 292 [Warning] Aborted connection 292 to db: 'unconnected' user: 'unauthenticated' host: 'localhost' (This connection closed normally without authentication)
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[24456]: WSREP_SST: [ERROR] mariadb-backup finished with error: 1. Check syslog or '/var/lib/mysql/mariabackup.backup.log' for details (20241108 11:41:44.580)
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[24456]: WSREP_SST: [ERROR] Cleanup after exit with status: 22 (20241108 11:41:44.583)
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[24456]: WSREP_SST: [ERROR] Removing /var/lib/mysql/mariadb_backup_galera_info file due to signal (20241108 11:41:44.586)
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[24456]: WSREP_SST: [INFO] Cleaning up temporary directories (20241108 11:41:44.591)
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[2702]: 2024-11-08 11:41:44 0 [ERROR] WSREP: Failed to read from: wsrep_sst_mariabackup --role 'donor' --address '172.29.237.189:4444/xtrabackup_sst//1' --local-port 3306 --socket '/run/mysqld/mysqld.sock' --progress 0 --datadir '/var/lib/mysql/' --gtid '4234e811-9dc2-11ef-8589-eb187c85f058:192' --gtid-domain-id 0 --binlog '/var/lib/mysql/mariadb-bin' --binlog-index '/var/lib/mysql/mariadb-bin.index' --mysqld-args --wsrep-new-cluster --wsrep_start_position=00000000-0000-0000-0000-000000000000:-1
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[2702]: 2024-11-08 11:41:44 0 [ERROR] WSREP: Process completed with error: wsrep_sst_mariabackup --role 'donor' --address '172.29.237.189:4444/xtrabackup_sst//1' --local-port 3306 --socket '/run/mysqld/mysqld.sock' --progress 0 --datadir '/var/lib/mysql/' --gtid '4234e811-9dc2-11ef-8589-eb187c85f058:192' --gtid-domain-id 0 --binlog '/var/lib/mysql/mariadb-bin' --binlog-index '/var/lib/mysql/mariadb-bin.index' --mysqld-args --wsrep-new-cluster --wsrep_start_position=00000000-0000-0000-0000-000000000000:-1: 22 (Invalid argument)
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[2702]: 2024-11-08 11:41:44 0 [Note] WSREP: SST sending failed: -22
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[2702]: 2024-11-08 11:41:44 0 [Note] WSREP: Server status change donor -> joined
      Nov 08 11:41:44 aio1-galera-container-79d1071a mariadbd[2702]: 2024-11-08 11:41:44 0 [ERROR] WSREP: Command did not run: wsrep_sst_mariabackup --role 'donor' --address '172.29.237.189:4444/xtrabackup_sst//1' --local-port 3306 --socket '/run/mysqld/mysqld.sock' --progress 0 --datadir '/var/lib/mysql/' --gtid '4234e811-9dc2-11ef-8589-eb187c85f058:192' --gtid-domain-id 0 --binlog '/var/lib/mysql/mariadb-bin' --binlog-index '/var/lib/mysql/mariadb-bin.index' --mysqld-args --wsrep-new-cluster --wsrep_start_position=00000000-0000-0000-0000-000000000000:-1
      

      root@aio1-galera-container-79d1071a:/# tail -F /var/lib/mysql/mariabackup.backup.log
      tail: cannot open '/var/lib/mysql/mariabackup.backup.log' for reading: No such file or directory
      tail: '/var/lib/mysql/mariabackup.backup.log' has appeared;  following new file
      [00] 2024-11-08 11:42:22 Connecting to MariaDB server host: localhost, user: admin, password: set, port: 3306, socket: /run/mysqld/mysqld.sock
      [00] 2024-11-08 11:42:22 Failed to connect to MariaDB server: SSL connection error: SSL certificate validation failure.
      tail: '/var/lib/mysql/mariabackup.backup.log' has become inaccessible: No such file or directory
      ^C
      root@aio1-galera-container-79d1071a:/# 
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              noonedeadpunk Dmitriy Rabotyagov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.