MDEV-35368 Validation of SSL certificate fails for mariadb-backup

Just like in CONC-712, disable hostname checks for connections
over unix socket. Even for not self-signed certificates.